@@ -1,4 +1,6 @@
 1.7.1	????-??-??
+	* bugfix: Only one signature per RRset needs to be valid with
+	  ldns-verify-zone.  Thanks Emil Natan.
 	* ldns-notify can use all supported hash algorithms with -y.
 	* bugfix #1209: make install ldns.pc file
 	  Thanks Oleksandr Natalenko
